k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job509-ingress
  namespace: default
  labels:
    app: job509
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: job509.polym.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: job509-service
            port:
              number: 80
  tls:
  - hosts:
    - job509.polym.at
